// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots dag/basic editable mode 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <svg
    className="dag-wrapper Dag-root-8"
    height={500}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    width={500}
  >
    <g
      className="dag__graph"
    >
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-0"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-1"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-2"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-3"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-4"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-5"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--app"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--lodash"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--react"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--react-dom"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--apollo"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--enzyme"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots dag/basic no wrapper 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <svg
    className="dag-wrapper Dag-root-1"
    height={500}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    width={500}
  >
    <g
      className="dag__graph"
    >
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-0"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-1"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-2"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-3"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-4"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-5"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--app"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--lodash"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--react"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--react-dom"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--apollo"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--enzyme"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots dag/themed paper wrapper (dark) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root-49 MuiPaper-elevation2-53 MuiPaper-rounded-50"
    style={
      Object {
        "height": "500px",
        "width": "500px",
      }
    }
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <svg
        className="dag-wrapper Dag-root-76"
        height={500}
        onDoubleClick={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        width={500}
      >
        <g
          className="dag__graph"
        >
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-0"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-1"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-2"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-3"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-4"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-5"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--app"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--lodash"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--react"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--react-dom"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--apollo"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--enzyme"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots dag/themed paper wrapper (light) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root-15 MuiPaper-elevation2-19 MuiPaper-rounded-16"
    style={
      Object {
        "height": "500px",
        "width": "500px",
      }
    }
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <svg
        className="dag-wrapper Dag-root-42"
        height={500}
        onDoubleClick={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        width={500}
      >
        <g
          className="dag__graph"
        >
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-0"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-1"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-2"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-3"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-4"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-5"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--app"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--lodash"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--react"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--react-dom"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--apollo"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--enzyme"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
